# easy-agents

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  agent.py  main.py  pyproject.toml
mcps/: github_extended.py
utils/: cron.py
